--- a/src/Styles/TemplateHeader.css
+++ b/src/Styles/TemplateHeader.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px 20px 0px;
+  margin-bottom: 10px;
 }
 
 .template-header-first {
@@ -61,7 +62,9 @@
 
 .template-user-about {
   font-size: 12px;
+  padding: 0px 24px;
 }
+
 @media screen and (max-width: 900px) {
   .template-user-name {
     font-size: 4vw;
